add into to connect from outside of the cluster

--- a/hazelcast-statefulset.yaml
+++ b/hazelcast-statefulset.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         app: hazelcast
     spec:
+      serviceAccountName: hazelcast-service-account
       containers:
         - name: hazelcast
           image: hazelcast/hazelcast:4.1
